--- a/Markdown/其他/excel/其他.md
+++ b/Markdown/其他/excel/其他.md
@@ -1,9 +1,14 @@
 ## VLOOKUP配合if方向查询
-|||
-|---|---|
-| 部门 | 姓名 |
-| 财务部 | 李四 |
-=VLOOKUP("李四",IF({1,0},B:B,A:A),2,TRUE)
+```C++
+=VLOOKUP("李四",IF({1,0},C:C,A:A),2,TRUE)
+//使用if数组运算重构排序方式,C在第一列A在第二列,2对应A
+
+// 拆分
+=IF(1,A1,B2)	//为true返回A1的值
+
+//使用数组运算
+=IF({1,0}A1,B2)		//数组运算使用 "{}" 符号；为true返回A1,为false返回B2
+```
 
 
 ## 通配符
