--- a/Markdown/其他/excel/其他.md
+++ b/Markdown/其他/excel/其他.md
@@ -2,6 +2,7 @@
 ```C++
 =VLOOKUP("李四",IF({1,0},C:C,A:A),2,TRUE)
 //使用if数组运算重构排序方式,C在第一列A在第二列,2对应A
+//C:C为要查询的名；A:A是返回的结果
 
 // 拆分
 =IF(1,A1,B2)	//为true返回A1的值
