--- a/Markdown/网络/五大互联网管理机构.md
+++ b/Markdown/网络/五大互联网管理机构.md
@@ -15,6 +15,16 @@
 1048576 /12
 2097152 /11
 4194304 /10
+8388608 /9
+16777216 /8
+33554432 /7
+67108864 /6
+134217728 /5
+268435456 /4
+536870912 /3
+1073741824 /2
+2147483648 /1
+4294967296 /0
 ```
 
 ## IP管理机构
@@ -80,8 +90,39 @@ Sub 宏1()
     Cells.Replace What:="2097152", Replacement:="11", LookAt:=xlPart, _
         SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
         ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
-    Cells.Replace What:="41943810", Replacement:="10", LookAt:=xlPart, _
+    Cells.Replace What:="4194304", Replacement:="10", LookAt:=xlPart, _
         SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
         ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="8388608", Replacement:="9", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="16777216", Replacement:="8", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="33554432", Replacement:="7", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="67108864", Replacement:="6", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="134217728", Replacement:="5", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="268435456", Replacement:="4", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="536870912", Replacement:="3", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="1073741824", Replacement:="2", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="2147483648", Replacement:="1", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    Cells.Replace What:="4294967296", Replacement:="0", LookAt:=xlPart, _
+        SearchOrder:=xlByRows, MatchCase:=False, SearchFormat:=False, _
+        ReplaceFormat:=False, FormulaVersion:=xlReplaceFormula2
+    
 End Sub
 ```
