--- a/Markdown/其他/游戏.md
+++ b/Markdown/其他/游戏.md
@@ -1,7 +1,31 @@
 
 
 ## 帧率
++ 一秒显示多少画面就是帧率
 显示帧率的软件有`游戏加加` `RTSS` `微星小飞机`等
+
+## 画面
++ 渲染一个画面需要CPU和GPU
+CPU提供画面需要的各种素材（顶点坐标，数据索引，摄像机视锥，灯光，材质球等数据）打包发送给GPU，显卡使用算法对这些数据进行处理（顶点着色器，三角形处理，光栅化，像素着色器，帧缓冲器）。
+
+## 帧生成时间
+电脑下一帧生成的时间
+
+```C++
+                帧生成时间（12ms）
+40    第5帧
+42
+44
+46
+48
+50
+52    第6帧
+
+
+/*
+1秒/帧生成时间 = 实际帧率（1/0.012=83）
+*/
+```
 
 ## RTSS
 `integral` 积分算法 及时间性算法 通过若干个low帧数据积分求值强调的是整体low帧水平
@@ -12,7 +36,24 @@
 总共执行了130秒,总帧数17160,所以平均帧率(Average开头那一排)就是17160/130=132
 
 ### 1%low由来
++ 百分位数是一种统计学术语，用于描述一组数据中特定百分比位置的值。具体来说，如果将一组数据从小到大排序，并计算相应的累计百分位，则某一百分位所对应的数据值就称为这一百分位的百分位数
+
++ 1%l0w即统计区间内帧生成时间最长的1%部分帧的平均帧。这个1%l0w帧越接近平均帧，也就意味着实际体验中画面越流畅，没有大幅度掉帧情况。
++ 两种计算方法
+    + 时间
+    + 数量
 
 89秒内总共统计了7005帧,7005*0.01≈70——因此它取的就是“第70慢那一帧”的帧生时间,其倒数便是所谓`1%最低帧率`的由来。这个例子里第70慢那一帧,生成时间应是约18.52毫秒,1000/18.52≈54,所以1%最低帧率是54。
 
+#### 数量
++ 100ms/帧生成时间最长的10帧的平均帧=1%low
 
+1000帧：所有帧排列（排序由大到小），`1000/1% = 10`。取帧生成时间最长的10个帧的数据，计算平均值后再用`1000ms/平均值（74）= 14`
+
+#### 时间
++ 1000ms/最大帧生成时间相加满600ms帧的平均帧=1%low
+
+60秒的1%就是0.6也就是600ms
+1分钟统计800帧
+
+所有帧排列（排序由大到小），将最差的值（帧生成时间）相加累计。当这个数值超过600ms时，计算这几帧的平均时间`1000ms/平均值（76）= 13`
